Worked on dark/light mode, still have to fix project slides and the length on mobile of the contacts page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,16 +3,17 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --foreground-rgb: 2, 6, 23;
+  --background-start-rgb: 199, 210, 254;
+  --background-end-rgb: 196, 181, 253;
+  
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+    --foreground-rgb: 199, 210, 254;
+    --background-end-rgb: 2, 6, 23;
+    --background-start-rgb: 15, 23, 42;
   }
 }
 
@@ -24,12 +25,4 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
-}
-
-.projectCard {
-  background: linear-gradient(
-    to bottom, 
-    transparent
-    rgb()
-  )
 }
